# embedded-projects

./: README.md
electrical_chessboard/chess_engine/: .gitignore  Makefile
electrical_chessboard/chess_engine/src/: CMakeLists.txt  attack_tables.cpp  attack_tables.hpp  board.c  board.cpp  board.h  board.hpp  main.c  main.cpp
